--- a/app/package.json
+++ b/app/package.json
@@ -1,7 +1,6 @@
 {
   "name": "app",
   "homepage": "https://EdiJunior88.github.io/NewTab_Academy_Projeto_Individual_React",
-  
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -38,5 +37,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^3.2.3"
   }
 }
